# ghostty-theme-picker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sample-themes/: Dracula  Faded Mono  GitHub Light  Gruvbox Dark  Nord
src/ghostty_theme_picker/: __init__.py  __main__.py  cli.py  color.py  config.py  ghostty_config.py  preview.py  ranking.py  terminal.py  themes.py  toml_writer.py  tui.py
tests/: __init__.py  test_app.py  test_cli.py  test_color.py  test_config.py  test_ghostty_config.py  test_preview.py  test_ranking.py  test_terminal.py  test_themes.py
